--- a/audio_module/audio_classifier.ipynb
+++ b/audio_module/audio_classifier.ipynb
@@ -788,8 +788,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "cebc5fa9-c5b8-42ce-8d94-c7838c3fed50",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'sounddevice'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[74], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msounddevice\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mlibrosa\u001b[39;00m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sounddevice'"
+     ]
+    }
+   ],
+   "source": [
+    "import sounddevice as sd\n",
+    "import numpy as np\n",
+    "import librosa\n",
+    "import tensorflow as tf\n",
+    "import time\n",
+    "\n",
+    "# Constants\n",
+    "SAMPLE_RATE = 16000  # target sample rate\n",
+    "DURATION = 3  # seconds of audio\n",
+    "CHUNK_SIZE = SAMPLE_RATE * DURATION  # 48000 samples\n",
+    "MODEL_INPUT_SHAPE = (64, 32, 1)  # what your model expects\n",
+    "\n",
+    "# Load trained model\n",
+    "model = tf.keras.models.load_model(\"your_model.h5\")\n",
+    "\n",
+    "def preprocess_audio(audio):\n",
+    "    # Convert 1D audio to mel-spectrogram of shape (64, 96)\n",
+    "    mel_spec = librosa.feature.melspectrogram(y=audio, sr=SAMPLE_RATE, n_fft=1024, hop_length=160, n_mels=64)\n",
+    "    mel_db = librosa.power_to_db(mel_spec, ref=np.max)\n",
+    "    return mel_db  # shape: (64, ~96)\n",
+    "\n",
+    "def segment_and_predict(spectrogram):\n",
+    "    # Segment into overlapping 1-sec chunks (64x32 windows from 64x96)\n",
+    "    segments = []\n",
+    "    for i in range(0, spectrogram.shape[1] - 32 + 1, 16):\n",
+    "        segment = spectrogram[:, i:i+32]\n",
+    "        segments.append(segment)\n",
+    "\n",
+    "    segments = np.stack(segments)[..., np.newaxis].astype(np.float32)  # shape: (N, 64, 32, 1)\n",
+    "    preds = model.predict(segments)\n",
+    "    return np.mean(preds)\n",
+    "\n",
+    "def stream_and_classify():\n",
+    "    print(\"Listening...\")\n",
+    "    while True:\n",
+    "        audio = sd.rec(frames=CHUNK_SIZE, samplerate=SAMPLE_RATE, channels=1, dtype='float32')\n",
+    "        sd.wait()\n",
+    "\n",
+    "        audio = np.squeeze(audio)\n",
+    "        spectrogram = preprocess_audio(audio)\n",
+    "\n",
+    "        if spectrogram.shape[1] >= 96:\n",
+    "            spectrogram = spectrogram[:, :96]  # trim or pad if necessary\n",
+    "\n",
+    "            pred = segment_and_predict(spectrogram)\n",
+    "            print(f\"Prediction (mean): {pred:.4f} — {'DRONE' if pred > 0.5 else 'UNKNOWN'}\")\n",
+    "        \n",
+    "        time.sleep(1)  # prevent overlapping reads\n",
+    "\n",
+    "# Run it\n",
+    "stream_and_classify()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9cbd9523-7d15-40ee-b897-37dc517fb6b7",
    "metadata": {},
    "outputs": [],
    "source": []
